Fixes for wrap interpolation in Plot.py.

--- a/tests/unit/test_util/test_plot/test_svg/index.html
+++ b/tests/unit/test_util/test_plot/test_svg/index.html
@@ -29,9 +29,11 @@
     <li>
       <a href="SP_square_highfreq.svg">link</a> TestPlotReadLIS_SingleSquareCurveHighFreq.test_01(): Square wave with 0.5&apos; spacing to check wrap interpolation.</li>
     <li>
+      <a href="SP_square_superhighfreq.svg">link</a> TestPlotReadLIS_SingleSquareCurveSuperHighFreq.test_01(): Square wave with 0.5&apos; spacing to check super high wrap interpolation.</li>
+    <li>
       <a href="HDT_00.svg">link</a> TestPlotReadLIS_HDT.test_01(): 200 feet of HDT on a 1:200 scale.</li>
     <li>
-      <a href="HDT_01.svg">link</a> TestPlotReadLIS_HDT_25.test_01(): 200 feet of HDT on a 1:25 scale.</li>
+      <a href="HDT_01.svg">link</a> TestPlotReadLIS_HDT_20.test_01(): 200 feet of HDT on a 1:20 scale.</li>
     <li>
       <a href="HDT_02.svg">link</a> TestPlotReadLIS_HDT_40.test_01(): 200 feet of HDT on a 1:40 scale.</li>
     <li>
@@ -51,7 +53,7 @@
     <li>
       <a href="Resistivity_3Track_Logrithmic.xml_00_LIS.svg">link</a> LgFormat: &quot;Resistivity_3Track_Logrithmic.xml_00&quot; 2000&apos; of 10 curves, linear and log scale.</li>
     <li>
-      <a href="HDT_Example.svg">link</a> LgFormat: &quot;HDT_Example.svg&quot; 25&apos; of example HDT on 1:25 scale with API header.</li>
+      <a href="HDT_Example.svg">link</a> LgFormat: &quot;HDT_Example.svg&quot; 25&apos; of example HDT on 1:40 scale with API header.</li>
     <li>
       <a href="SP_sin_api.svg">link</a> TestPlotReadLIS_SingleSinCurve.test_01(): Sinusoidal SP plotted on a number of different scales with API header.</li>
   </ol>
