Add data consumed to EFLR. Template now populated with ctor. Fix docs - example RP66V1 code.

--- a/example_data/RP66V1/HTML/206_05a-_3_DWL_DWL_WIRE_258276498.DLIS.html
+++ b/example_data/RP66V1/HTML/206_05a-_3_DWL_DWL_WIRE_258276498.DLIS.html
@@ -204,6 +204,7 @@ th.monospace, td.monospace {
     <a id="anchor_0_0"/>
     <h3>EFLR: FILE-HEADER Shape: (1, 2)</h3>
     <p>Location: LogicalRecordPosition: VR: 0x00000050 LRSH: 0x00000054</p>
+    <p>Logical Data consumed to create: Set: 13 Template: 36 Complete EFLR: 120</p>
     <p>File-Header Object &quot;5&quot; O: 2 C: 0:</p>
     <table class="eflr">
       <tr>
@@ -222,6 +223,7 @@ th.monospace, td.monospace {
     <a id="anchor_0_1"/>
     <h3>EFLR: ORIGIN Shape: (1, 20)</h3>
     <p>Location: LogicalRecordPosition: VR: 0x00000050 LRSH: 0x000000d0</p>
+    <p>Logical Data consumed to create: Set: 8 Template: 304 Complete EFLR: 1279</p>
     <p>Logical File Defining Origin &quot;DLIS_DEFINING_ORIGIN&quot; O: 2 C: 0:</p>
     <table class="eflr">
       <tr>
@@ -312,6 +314,7 @@ th.monospace, td.monospace {
     <a id="anchor_0_2"/>
     <h3>EFLR: EQUIPMENT Shape: (14, 9)</h3>
     <p>Location: LogicalRecordPosition: VR: 0x00000050 LRSH: 0x000005d4</p>
+    <p>Logical Data consumed to create: Set: 14 Template: 118 Complete EFLR: 1497</p>
     <table class="eflr">
       <tr>
         <th class="eflr">ObjectName IDENT</th>
@@ -527,6 +530,7 @@ th.monospace, td.monospace {
     <a id="anchor_0_3"/>
     <h3>EFLR: TOOL Shape: (2, 7)</h3>
     <p>Location: LogicalRecordPosition: VR: 0x00000050 LRSH: 0x000011ec</p>
+    <p>Logical Data consumed to create: Set: 9 Template: 89 Complete EFLR: 1409</p>
     <table class="eflr">
       <tr>
         <th class="eflr">ObjectName IDENT</th>
@@ -568,6 +572,7 @@ th.monospace, td.monospace {
     <a id="anchor_0_4"/>
     <h3>EFLR: 440-CHANNEL Shape: (95, 3)</h3>
     <p>Location: LogicalRecordPosition: VR: 0x00000050 LRSH: 0x00001a34</p>
+    <p>Logical Data consumed to create: Set: 16 Template: 80 Complete EFLR: 2325</p>
     <table class="eflr">
       <tr>
         <th class="eflr">ObjectName IDENT</th>
@@ -1341,6 +1346,7 @@ th.monospace, td.monospace {
     <a id="anchor_0_5"/>
     <h3>EFLR: PARAMETER Shape: (79, 4)</h3>
     <p>Location: LogicalRecordPosition: VR: 0x00002050 LRSH: 0x00002358</p>
+    <p>Logical Data consumed to create: Set: 14 Template: 50 Complete EFLR: 3637</p>
     <table class="eflr">
       <tr>
         <th class="eflr">ObjectName IDENT</th>
@@ -2066,6 +2072,7 @@ th.monospace, td.monospace {
     <a id="anchor_0_6"/>
     <h3>EFLR: PARAMETER Shape: (138, 4)</h3>
     <p>Location: LogicalRecordPosition: VR: 0x00004050 LRSH: 0x00004164</p>
+    <p>Logical Data consumed to create: Set: 14 Template: 50 Complete EFLR: 14149</p>
     <table class="eflr">
       <tr>
         <th class="eflr">ObjectName IDENT</th>
@@ -3322,6 +3329,7 @@ th.monospace, td.monospace {
     <a id="anchor_0_7"/>
     <h3>EFLR: PARAMETER Shape: (9, 4)</h3>
     <p>Location: LogicalRecordPosition: VR: 0x0000804c LRSH: 0x000090d0</p>
+    <p>Logical Data consumed to create: Set: 14 Template: 50 Complete EFLR: 475</p>
     <table class="eflr">
       <tr>
         <th class="eflr">ObjectName IDENT</th>
@@ -3417,6 +3425,7 @@ th.monospace, td.monospace {
     <a id="anchor_0_8"/>
     <h3>EFLR: CALIBRATION-MEASUREMENT Shape: (6, 11)</h3>
     <p>Location: LogicalRecordPosition: VR: 0x0000804c LRSH: 0x000094ec</p>
+    <p>Logical Data consumed to create: Set: 28 Template: 171 Complete EFLR: 781</p>
     <table class="eflr">
       <tr>
         <th class="eflr">ObjectName IDENT</th>
@@ -3534,6 +3543,7 @@ th.monospace, td.monospace {
     <a id="anchor_0_9"/>
     <h3>EFLR: CALIBRATION-COEFFICIENT Shape: (12, 2)</h3>
     <p>Location: LogicalRecordPosition: VR: 0x0000804c LRSH: 0x00009954</p>
+    <p>Logical Data consumed to create: Set: 28 Template: 49 Complete EFLR: 561</p>
     <table class="eflr">
       <tr>
         <th class="eflr">ObjectName IDENT</th>
@@ -3630,6 +3640,7 @@ th.monospace, td.monospace {
     <a id="anchor_0_10"/>
     <h3>EFLR: CALIBRATION-COEFFICIENT Shape: (12, 2)</h3>
     <p>Location: LogicalRecordPosition: VR: 0x0000804c LRSH: 0x00009b8c</p>
+    <p>Logical Data consumed to create: Set: 28 Template: 49 Complete EFLR: 617</p>
     <table class="eflr">
       <tr>
         <th class="eflr">ObjectName IDENT</th>
@@ -3726,6 +3737,7 @@ th.monospace, td.monospace {
     <a id="anchor_0_11"/>
     <h3>EFLR: CALIBRATION Shape: (27, 4)</h3>
     <p>Location: LogicalRecordPosition: VR: 0x0000804c LRSH: 0x00009dfc</p>
+    <p>Logical Data consumed to create: Set: 16 Template: 88 Complete EFLR: 1620</p>
     <table class="eflr">
       <tr>
         <th class="eflr">ObjectName IDENT</th>
@@ -3983,6 +3995,7 @@ th.monospace, td.monospace {
     <a id="anchor_0_12"/>
     <h3>EFLR: PROCESS Shape: (1, 7)</h3>
     <p>Location: LogicalRecordPosition: VR: 0x0000a04c LRSH: 0x0000ab00</p>
+    <p>Logical Data consumed to create: Set: 12 Template: 99 Complete EFLR: 181</p>
     <table class="eflr">
       <tr>
         <th class="eflr">KEY</th>
@@ -4020,6 +4033,7 @@ th.monospace, td.monospace {
     <a id="anchor_0_13"/>
     <h3>EFLR: 440-OP-CORE_TABLES Shape: (250, 22)</h3>
     <p>Location: LogicalRecordPosition: VR: 0x0000a04c LRSH: 0x0000abbc</p>
+    <p>Logical Data consumed to create: Set: 23 Template: 140 Complete EFLR: 24312</p>
     <table class="eflr">
       <tr>
         <th class="eflr">ObjectName IDENT</th>
@@ -10802,6 +10816,7 @@ th.monospace, td.monospace {
     <a id="anchor_0_14"/>
     <h3>EFLR: 440-OP-CORE_REPORT_FORMAT Shape: (17, 5)</h3>
     <p>Location: LogicalRecordPosition: VR: 0x0001004c LRSH: 0x00010ad0</p>
+    <p>Logical Data consumed to create: Set: 31 Template: 61 Complete EFLR: 999</p>
     <table class="eflr">
       <tr>
         <th class="eflr">ObjectName IDENT</th>
@@ -10987,6 +11002,7 @@ th.monospace, td.monospace {
     <a id="anchor_0_15"/>
     <h3>EFLR: CHANNEL Shape: (104, 8)</h3>
     <p>Location: LogicalRecordPosition: VR: 0x0001004c LRSH: 0x00010ebc</p>
+    <p>Logical Data consumed to create: Set: 9 Template: 116 Complete EFLR: 7174</p>
     <table class="eflr">
       <tr>
         <th class="eflr">ObjectName IDENT</th>
@@ -12357,6 +12373,7 @@ th.monospace, td.monospace {
     <a id="anchor_0_16"/>
     <h3>EFLR: 440-PRESENTATION-DESCRIPTION Shape: (1, 7)</h3>
     <p>Location: LogicalRecordPosition: VR: 0x0001204c LRSH: 0x00012ad0</p>
+    <p>Logical Data consumed to create: Set: 34 Template: 94 Complete EFLR: 111</p>
     <table class="eflr">
       <tr>
         <th class="eflr">KEY</th>
@@ -12394,6 +12411,7 @@ th.monospace, td.monospace {
     <a id="anchor_0_17"/>
     <h3>EFLR: 440-OP-CHANNEL Shape: (93, 1)</h3>
     <p>Location: LogicalRecordPosition: VR: 0x0001204c LRSH: 0x00012b44</p>
+    <p>Logical Data consumed to create: Set: 20 Template: 33 Complete EFLR: 1226</p>
     <table class="eflr">
       <tr>
         <th class="eflr">ObjectName IDENT</th>
@@ -12963,6 +12981,7 @@ th.monospace, td.monospace {
     <a id="anchor_0_18"/>
     <h3>EFLR: FRAME Shape: (2, 8)</h3>
     <p>Location: LogicalRecordPosition: VR: 0x0001204c LRSH: 0x00013014</p>
+    <p>Logical Data consumed to create: Set: 7 Template: 111 Complete EFLR: 572</p>
     <table class="eflr">
       <tr>
         <th class="eflr">ObjectName IDENT</th>
@@ -13036,68 +13055,58 @@ th.monospace, td.monospace {
       </tr>
     </table>
     <h4>X Axis Spacing</h4>
+    <p>Definitions: &apos;backward&apos; if space &lt; -0.5 median&#010;&apos;duplicate&apos; if -0.5 median &lt;= space &lt; 0.5 median&#010;&apos;normal&apos; if 0.5 median &lt;= space &lt; 1.5 median&#010;&apos;skipped&apos; if space &gt;= 1.5 median&#010;</p>
     <table class="monospace">
       <tr>
         <th class="monospace">X Axis Spacing</th>
         <th class="monospace">Value</th>
-        <th class="monospace">Description</th>
       </tr>
       <tr>
         <td class="monospace">Minimum</td>
         <td class="monospace">1000.0 [ms]</td>
-        <td class="monospace"/>
       </tr>
       <tr>
         <td class="monospace">Mean</td>
         <td class="monospace">1000.0010869565217 [ms]</td>
-        <td class="monospace"/>
       </tr>
       <tr>
         <td class="monospace">Median</td>
         <td class="monospace">1000.0 [ms]</td>
-        <td class="monospace"/>
       </tr>
       <tr>
         <td class="monospace">Maximum</td>
         <td class="monospace">1001.0 [ms]</td>
-        <td class="monospace"/>
       </tr>
       <tr>
         <td class="monospace">Range</td>
         <td class="monospace">1.0 (0.100000%) [ms]</td>
-        <td class="monospace"/>
       </tr>
       <tr>
         <td class="monospace">Std. Dev.</td>
         <td class="monospace">0.03295110085048721 [ms]</td>
-        <td class="monospace"/>
       </tr>
       <tr>
-        <td class="monospace">Count of back</td>
-        <td class="monospace">0</td>
-        <td class="monospace">spacing &lt; -0.5 median</td>
-      </tr>
-      <tr>
-        <td class="monospace">Count of duplicate</td>
-        <td class="monospace">0</td>
-        <td class="monospace">-0.5 median &lt;= spacing &lt; 0.5 median</td>
-      </tr>
-      <tr>
-        <td class="monospace">Count of normal</td>
+        <td class="monospace">Count of Normal</td>
         <td class="monospace">920</td>
-        <td class="monospace">0.5 median &lt;= spacing &lt; 1.5 median</td>
       </tr>
       <tr>
-        <td class="monospace">Count of skipped</td>
+        <td class="monospace">Count of Duplicate</td>
         <td class="monospace">0</td>
-        <td class="monospace">spacing &gt;= 1.5 median</td>
+      </tr>
+      <tr>
+        <td class="monospace">Count of Skipped</td>
+        <td class="monospace">0</td>
+      </tr>
+      <tr>
+        <td class="monospace">Count of Back</td>
+        <td class="monospace">0</td>
       </tr>
     </table>
     <p>Frame spacing frequency:</p>
-    <pre>        Value [   N]: Relative Frequency&#010;  1000.000000 [ 919]: ********************************************************************************&#010;  1000.100000 [   0]: &#010;  1000.200000 [   0]: &#010;  1000.300000 [   0]: &#010;  1000.400000 [   0]: &#010;  1000.500000 [   0]: &#010;  1000.600000 [   0]: &#010;  1000.700000 [   0]: &#010;  1000.800000 [   0]: &#010;  1000.900000 [   1]: </pre>
+    <pre>     Value [   N]: Relative Frequency&#010;  1000.000 [ 919]: ********************************************************************************&#010;  1000.100 [   0]: &#010;  1000.200 [   0]: &#010;  1000.300 [   0]: &#010;  1000.400 [   0]: &#010;  1000.500 [   0]: &#010;  1000.600 [   0]: &#010;  1000.700 [   0]: &#010;  1000.800 [   0]: &#010;  1000.900 [   1]: </pre>
     <h4>Frame Analysis</h4>
     <p>Available frames: 921 X axis from 16677259.000 to 17597260.000 interval 1000.000 [ms]</p>
-    <p>Frame analysis on<tt> &lt;Slice on length=921 start=0 stop=921 step=1&gt;</tt> frame(s). Frame size: 16 bytes. Number of frames created: 921 Numpy total memory: 14,736 bytes</p>
+    <p>Frame analysis on &lt;Slice on length=921 start=0 stop=921 step=1&gt; frame(s). Number of frames created: 921 Numpy total memory: 14,736 bytes</p>
     <p>RP66V1 Frame size 16 (bytes/frame)) represented internally as 16 (bytes/frame).</p>
     <table class="monospace">
       <tr>
@@ -13216,68 +13225,58 @@ th.monospace, td.monospace {
       </tr>
     </table>
     <h4>X Axis Spacing</h4>
+    <p>Definitions: &apos;backward&apos; if space &lt; -0.5 median&#010;&apos;duplicate&apos; if -0.5 median &lt;= space &lt; 0.5 median&#010;&apos;normal&apos; if 0.5 median &lt;= space &lt; 1.5 median&#010;&apos;skipped&apos; if space &gt;= 1.5 median&#010;</p>
     <table class="monospace">
       <tr>
         <th class="monospace">X Axis Spacing</th>
         <th class="monospace">Value</th>
-        <th class="monospace">Description</th>
       </tr>
       <tr>
         <td class="monospace">Minimum</td>
         <td class="monospace">400.0 [ms]</td>
-        <td class="monospace"/>
       </tr>
       <tr>
         <td class="monospace">Mean</td>
         <td class="monospace">400.0004347826087 [ms]</td>
-        <td class="monospace"/>
       </tr>
       <tr>
         <td class="monospace">Median</td>
         <td class="monospace">400.0 [ms]</td>
-        <td class="monospace"/>
       </tr>
       <tr>
         <td class="monospace">Maximum</td>
         <td class="monospace">401.0 [ms]</td>
-        <td class="monospace"/>
       </tr>
       <tr>
         <td class="monospace">Range</td>
         <td class="monospace">1.0 (0.250000%) [ms]</td>
-        <td class="monospace"/>
       </tr>
       <tr>
         <td class="monospace">Std. Dev.</td>
         <td class="monospace">0.0208469079908467 [ms]</td>
-        <td class="monospace"/>
       </tr>
       <tr>
-        <td class="monospace">Count of back</td>
-        <td class="monospace">0</td>
-        <td class="monospace">spacing &lt; -0.5 median</td>
-      </tr>
-      <tr>
-        <td class="monospace">Count of duplicate</td>
-        <td class="monospace">0</td>
-        <td class="monospace">-0.5 median &lt;= spacing &lt; 0.5 median</td>
-      </tr>
-      <tr>
-        <td class="monospace">Count of normal</td>
+        <td class="monospace">Count of Normal</td>
         <td class="monospace">2,300</td>
-        <td class="monospace">0.5 median &lt;= spacing &lt; 1.5 median</td>
       </tr>
       <tr>
-        <td class="monospace">Count of skipped</td>
+        <td class="monospace">Count of Duplicate</td>
         <td class="monospace">0</td>
-        <td class="monospace">spacing &gt;= 1.5 median</td>
+      </tr>
+      <tr>
+        <td class="monospace">Count of Skipped</td>
+        <td class="monospace">0</td>
+      </tr>
+      <tr>
+        <td class="monospace">Count of Back</td>
+        <td class="monospace">0</td>
       </tr>
     </table>
     <p>Frame spacing frequency:</p>
-    <pre>        Value [    N]: Relative Frequency&#010;   400.000000 [ 2299]: ********************************************************************************&#010;   400.100000 [    0]: &#010;   400.200000 [    0]: &#010;   400.300000 [    0]: &#010;   400.400000 [    0]: &#010;   400.500000 [    0]: &#010;   400.600000 [    0]: &#010;   400.700000 [    0]: &#010;   400.800000 [    0]: &#010;   400.900000 [    1]: </pre>
+    <pre>     Value [    N]: Relative Frequency&#010;   400.000 [ 2299]: ********************************************************************************&#010;   400.100 [    0]: &#010;   400.200 [    0]: &#010;   400.300 [    0]: &#010;   400.400 [    0]: &#010;   400.500 [    0]: &#010;   400.600 [    0]: &#010;   400.700 [    0]: &#010;   400.800 [    0]: &#010;   400.900 [    1]: </pre>
     <h4>Frame Analysis</h4>
     <p>Available frames: 2301 X axis from 16677259.000 to 17597260.000 interval 400.000 [ms]</p>
-    <p>Frame analysis on<tt> &lt;Slice on length=2301 start=0 stop=2301 step=1&gt;</tt> frame(s). Frame size: 172 bytes. Number of frames created: 2301 Numpy total memory: 395,772 bytes</p>
+    <p>Frame analysis on &lt;Slice on length=2301 start=0 stop=2301 step=1&gt; frame(s). Number of frames created: 2301 Numpy total memory: 395,772 bytes</p>
     <p>RP66V1 Frame size 172 (bytes/frame)) represented internally as 172 (bytes/frame).</p>
     <table class="monospace">
       <tr>
