--- a/example_data/RP66V1/HTML/MINIMAL_FILE.dlis.html
+++ b/example_data/RP66V1/HTML/MINIMAL_FILE.dlis.html
@@ -161,6 +161,7 @@ th.monospace, td.monospace {
     <a id="anchor_0_0"/>
     <h3>EFLR: FILE-HEADER Shape: (1, 2)</h3>
     <p>Location: LogicalRecordPosition: VR: 0x00000050 LRSH: 0x00000054</p>
+    <p>Logical Data consumed to create: Set: 13 Template: 36 Complete EFLR: 120</p>
     <p>File-Header Object &quot;1&quot; O: 2 C: 0:</p>
     <table class="eflr">
       <tr>
@@ -179,6 +180,7 @@ th.monospace, td.monospace {
     <a id="anchor_0_1"/>
     <h3>EFLR: ORIGIN Shape: (1, 20)</h3>
     <p>Location: LogicalRecordPosition: VR: 0x00000050 LRSH: 0x000000d0</p>
+    <p>Logical Data consumed to create: Set: 8 Template: 286 Complete EFLR: 503</p>
     <p>Logical File Defining Origin &quot;0&quot; O: 2 C: 0:</p>
     <table class="eflr">
       <tr>
