--- a/example_data/RP66V1/HTML/BASIC_FILE_WITH_TWO_VISIBLE_RECORDS_NO_IFLRS.dlis.html
+++ b/example_data/RP66V1/HTML/BASIC_FILE_WITH_TWO_VISIBLE_RECORDS_NO_IFLRS.dlis.html
@@ -175,6 +175,7 @@ th.monospace, td.monospace {
     <a id="anchor_0_0"/>
     <h3>EFLR: FILE-HEADER Shape: (1, 2)</h3>
     <p>Location: LogicalRecordPosition: VR: 0x00000050 LRSH: 0x00000054</p>
+    <p>Logical Data consumed to create: Set: 13 Template: 36 Complete EFLR: 120</p>
     <p>File-Header Object &quot;1&quot; O: 2 C: 0:</p>
     <table class="eflr">
       <tr>
@@ -193,6 +194,7 @@ th.monospace, td.monospace {
     <a id="anchor_0_1"/>
     <h3>EFLR: ORIGIN Shape: (1, 20)</h3>
     <p>Location: LogicalRecordPosition: VR: 0x00000050 LRSH: 0x000000d0</p>
+    <p>Logical Data consumed to create: Set: 8 Template: 286 Complete EFLR: 503</p>
     <p>Logical File Defining Origin &quot;0&quot; O: 2 C: 0:</p>
     <table class="eflr">
       <tr>
@@ -283,6 +285,7 @@ th.monospace, td.monospace {
     <a id="anchor_0_2"/>
     <h3>EFLR: FRAME Shape: (1, 8)</h3>
     <p>Location: LogicalRecordPosition: VR: 0x00000050 LRSH: 0x000002cc</p>
+    <p>Logical Data consumed to create: Set: 7 Template: 111 Complete EFLR: 199</p>
     <table class="eflr">
       <tr>
         <th class="eflr">KEY</th>
@@ -324,6 +327,7 @@ th.monospace, td.monospace {
     <a id="anchor_0_3"/>
     <h3>EFLR: PARAMETER Shape: (62, 5)</h3>
     <p>Location: LogicalRecordPosition: VR: 0x00000050 LRSH: 0x00000398</p>
+    <p>Logical Data consumed to create: Set: 11 Template: 64 Complete EFLR: 3032</p>
     <table class="eflr">
       <tr>
         <th class="eflr">ObjectName IDENT</th>
@@ -959,6 +963,7 @@ th.monospace, td.monospace {
     <a id="anchor_0_4"/>
     <h3>EFLR: TOOL Shape: (3, 7)</h3>
     <p>Location: LogicalRecordPosition: VR: 0x00000050 LRSH: 0x00000f74</p>
+    <p>Logical Data consumed to create: Set: 6 Template: 100 Complete EFLR: 846</p>
     <table class="eflr">
       <tr>
         <th class="eflr">ObjectName IDENT</th>
@@ -1012,6 +1017,7 @@ th.monospace, td.monospace {
     <a id="anchor_0_5"/>
     <h3>EFLR: CHANNEL Shape: (5, 8)</h3>
     <p>Location: LogicalRecordPosition: VR: 0x00000050 LRSH: 0x000012c6</p>
+    <p>Logical Data consumed to create: Set: 9 Template: 116 Complete EFLR: 378</p>
     <table class="eflr">
       <tr>
         <th class="eflr">ObjectName IDENT</th>
@@ -1095,6 +1101,7 @@ th.monospace, td.monospace {
     <a id="anchor_0_6"/>
     <h3>EFLR: 280-FRAMESTEP-INFO Shape: (1, 4)</h3>
     <p>Location: LogicalRecordPosition: VR: 0x00000050 LRSH: 0x00001444</p>
+    <p>Logical Data consumed to create: Set: 20 Template: 69 Complete EFLR: 158</p>
     <table class="eflr">
       <tr>
         <th class="eflr">KEY</th>
@@ -1120,6 +1127,7 @@ th.monospace, td.monospace {
     <a id="anchor_0_7"/>
     <h3>EFLR: COMMENT Shape: (1, 1)</h3>
     <p>Location: LogicalRecordPosition: VR: 0x00000050 LRSH: 0x000014e6</p>
+    <p>Logical Data consumed to create: Set: 9 Template: 17 Complete EFLR: 1687</p>
     <table class="eflr">
       <tr>
         <th class="eflr">KEY</th>
@@ -1133,6 +1141,7 @@ th.monospace, td.monospace {
     <a id="anchor_0_8"/>
     <h3>EFLR: COMMENT Shape: (1, 1)</h3>
     <p>Location: LogicalRecordPosition: VR: 0x00000050 LRSH: 0x00001b82</p>
+    <p>Logical Data consumed to create: Set: 9 Template: 17 Complete EFLR: 1771</p>
     <table class="eflr">
       <tr>
         <th class="eflr">KEY</th>
