Add data consumed to EFLR. Template now populated with ctor. Fix docs - example RP66V1 code.

--- a/example_data/RP66V1/HTML/BASIC_FILE.dlis.html
+++ b/example_data/RP66V1/HTML/BASIC_FILE.dlis.html
@@ -184,6 +184,7 @@ th.monospace, td.monospace {
     <a id="anchor_0_0"/>
     <h3>EFLR: FILE-HEADER Shape: (1, 2)</h3>
     <p>Location: LogicalRecordPosition: VR: 0x00000050 LRSH: 0x00000054</p>
+    <p>Logical Data consumed to create: Set: 13 Template: 36 Complete EFLR: 120</p>
     <p>File-Header Object &quot;1&quot; O: 2 C: 0:</p>
     <table class="eflr">
       <tr>
@@ -202,6 +203,7 @@ th.monospace, td.monospace {
     <a id="anchor_0_1"/>
     <h3>EFLR: ORIGIN Shape: (1, 20)</h3>
     <p>Location: LogicalRecordPosition: VR: 0x00000050 LRSH: 0x000000d0</p>
+    <p>Logical Data consumed to create: Set: 8 Template: 286 Complete EFLR: 503</p>
     <p>Logical File Defining Origin &quot;0&quot; O: 2 C: 0:</p>
     <table class="eflr">
       <tr>
@@ -292,6 +294,7 @@ th.monospace, td.monospace {
     <a id="anchor_0_2"/>
     <h3>EFLR: FRAME Shape: (1, 8)</h3>
     <p>Location: LogicalRecordPosition: VR: 0x00000050 LRSH: 0x000002cc</p>
+    <p>Logical Data consumed to create: Set: 7 Template: 111 Complete EFLR: 199</p>
     <table class="eflr">
       <tr>
         <th class="eflr">KEY</th>
@@ -333,6 +336,7 @@ th.monospace, td.monospace {
     <a id="anchor_0_3"/>
     <h3>EFLR: PARAMETER Shape: (62, 5)</h3>
     <p>Location: LogicalRecordPosition: VR: 0x00000050 LRSH: 0x00000398</p>
+    <p>Logical Data consumed to create: Set: 11 Template: 64 Complete EFLR: 3032</p>
     <table class="eflr">
       <tr>
         <th class="eflr">ObjectName IDENT</th>
@@ -968,6 +972,7 @@ th.monospace, td.monospace {
     <a id="anchor_0_4"/>
     <h3>EFLR: TOOL Shape: (3, 7)</h3>
     <p>Location: LogicalRecordPosition: VR: 0x00000050 LRSH: 0x00000f74</p>
+    <p>Logical Data consumed to create: Set: 6 Template: 100 Complete EFLR: 846</p>
     <table class="eflr">
       <tr>
         <th class="eflr">ObjectName IDENT</th>
@@ -1021,6 +1026,7 @@ th.monospace, td.monospace {
     <a id="anchor_0_5"/>
     <h3>EFLR: CHANNEL Shape: (5, 8)</h3>
     <p>Location: LogicalRecordPosition: VR: 0x00000050 LRSH: 0x000012c6</p>
+    <p>Logical Data consumed to create: Set: 9 Template: 116 Complete EFLR: 378</p>
     <table class="eflr">
       <tr>
         <th class="eflr">ObjectName IDENT</th>
@@ -1104,6 +1110,7 @@ th.monospace, td.monospace {
     <a id="anchor_0_6"/>
     <h3>EFLR: 280-FRAMESTEP-INFO Shape: (1, 4)</h3>
     <p>Location: LogicalRecordPosition: VR: 0x00000050 LRSH: 0x00001444</p>
+    <p>Logical Data consumed to create: Set: 20 Template: 69 Complete EFLR: 158</p>
     <table class="eflr">
       <tr>
         <th class="eflr">KEY</th>
@@ -1129,6 +1136,7 @@ th.monospace, td.monospace {
     <a id="anchor_0_7"/>
     <h3>EFLR: COMMENT Shape: (1, 1)</h3>
     <p>Location: LogicalRecordPosition: VR: 0x00000050 LRSH: 0x000014e6</p>
+    <p>Logical Data consumed to create: Set: 9 Template: 17 Complete EFLR: 1687</p>
     <table class="eflr">
       <tr>
         <th class="eflr">KEY</th>
@@ -1142,6 +1150,7 @@ th.monospace, td.monospace {
     <a id="anchor_0_8"/>
     <h3>EFLR: COMMENT Shape: (1, 1)</h3>
     <p>Location: LogicalRecordPosition: VR: 0x00000050 LRSH: 0x00001b82</p>
+    <p>Logical Data consumed to create: Set: 9 Template: 17 Complete EFLR: 1771</p>
     <table class="eflr">
       <tr>
         <th class="eflr">KEY</th>
@@ -1155,6 +1164,7 @@ th.monospace, td.monospace {
     <a id="anchor_0_9"/>
     <h3>EFLR: COMMENT Shape: (1, 1)</h3>
     <p>Location: LogicalRecordPosition: VR: 0x00002050 LRSH: 0x0000227a</p>
+    <p>Logical Data consumed to create: Set: 9 Template: 17 Complete EFLR: 10317</p>
     <table class="eflr">
       <tr>
         <th class="eflr">KEY</th>
@@ -1246,86 +1256,10 @@ th.monospace, td.monospace {
     </table>
     <p>Frame spacing frequency:</p>
     <pre>     Value [   N]: Relative Frequency&#010;    -0.400 [ 648]: ********************************************************************************</pre>
-    <h4>X Axis</h4>
-    <table class="monospace">
-      <tr>
-        <th class="monospace">X Axis</th>
-        <th class="monospace">Value</th>
-      </tr>
-      <tr>
-        <td class="monospace">Channel</td>
-        <td class="monospace">OBNAME: O: 2 C: 0 I: b&apos;DEPT&apos;</td>
-      </tr>
-      <tr>
-        <td class="monospace">Long Name</td>
-        <td class="monospace">DEPT/Depth</td>
-      </tr>
-      <tr>
-        <td class="monospace">Minimum</td>
-        <td class="monospace">2889.4 [m]</td>
-      </tr>
-      <tr>
-        <td class="monospace">Maximum</td>
-        <td class="monospace">2954.199999999941 [m]</td>
-      </tr>
-      <tr>
-        <td class="monospace">Frame Count</td>
-        <td class="monospace">649</td>
-      </tr>
-    </table>
-    <h4>X Axis Spacing</h4>
-    <p>Definitions: &apos;backward&apos; if space &lt; -0.5 median&#010;&apos;duplicate&apos; if -0.5 median &lt;= space &lt; 0.5 median&#010;&apos;normal&apos; if 0.5 median &lt;= space &lt; 1.5 median&#010;&apos;skipped&apos; if space &gt;= 1.5 median&#010;</p>
-    <table class="monospace">
-      <tr>
-        <th class="monospace">X Axis Spacing</th>
-        <th class="monospace">Value</th>
-      </tr>
-      <tr>
-        <td class="monospace">Minimum</td>
-        <td class="monospace">0.09999999999990905 [m]</td>
-      </tr>
-      <tr>
-        <td class="monospace">Mean</td>
-        <td class="monospace">0.09999999999990905 [m]</td>
-      </tr>
-      <tr>
-        <td class="monospace">Median</td>
-        <td class="monospace">0.09999999999990905 [m]</td>
-      </tr>
-      <tr>
-        <td class="monospace">Maximum</td>
-        <td class="monospace">0.09999999999990905 [m]</td>
-      </tr>
-      <tr>
-        <td class="monospace">Range</td>
-        <td class="monospace">0.0 (0.000000%) [m]</td>
-      </tr>
-      <tr>
-        <td class="monospace">Std. Dev.</td>
-        <td class="monospace">0.0 [m]</td>
-      </tr>
-      <tr>
-        <td class="monospace">Count of Normal</td>
-        <td class="monospace">648</td>
-      </tr>
-      <tr>
-        <td class="monospace">Count of Duplicate</td>
-        <td class="monospace">0</td>
-      </tr>
-      <tr>
-        <td class="monospace">Count of Skipped</td>
-        <td class="monospace">0</td>
-      </tr>
-      <tr>
-        <td class="monospace">Count of Back</td>
-        <td class="monospace">0</td>
-      </tr>
-    </table>
-    <p>Frame spacing frequency:</p>
-    <pre>     Value [   N]: Relative Frequency&#010;    -0.400 [ 648]: ********************************************************************************</pre>
     <h4>Frame Analysis</h4>
     <p>Available frames: 649 X axis from 2889.400 to 2954.200 interval 0.100 [m]</p>
     <p>Frame analysis on &lt;Slice on length=649 start=0 stop=649 step=1&gt; frame(s). Number of frames created: 649 Numpy total memory: 18,172 bytes</p>
+    <p>RP66V1 Frame size 28 (bytes/frame)) represented internally as 28 (bytes/frame).</p>
     <table class="monospace">
       <tr>
         <th class="monospace">Channel</th>
